--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Bebar Água - Lembrete</string>
+    <string name="hint_peso">Seu Peso (Kg)</string>
+
+    
 </resources>
